--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This is BabyUni ($BABYU) token. We are the first BSC token with
+              $UNI auto-claim feature"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Baby Uniporn</title>
+    <title>BabyUni</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
